# RanobeDays

./: .gitignore  README.md  test.json
backend/: ;  Dockerfile  docker-compose.yml  pyproject.toml  req.txt  requirements.txt
backend/apps/: urls.py
backend/apps/authentication/: apis.py  exceptions.py  models.py  serializers.py  services.py  tests.py  types.py  urls.py
backend/apps/bookmark/: apps.py
backend/apps/bookmarks/: apis.py  models.py  permissions.py  selectors.py  serializers.py  services.py  types.py  urls.py
backend/apps/chapters/: admin.py  apis.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  types.py  urls.py
backend/apps/comments/: admin.py  apis.py  models.py  selectors.py  serializers.py  services.py  types.py  urls.py
backend/apps/common/: apis.py  exceptions.py  middlewares.py  models.py  services.py
backend/apps/core/: exceptions.py  middlewares.py  pagination.py  permissions.py  utils.py
backend/apps/libraries/: admin.py  apis.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  types.py  urls.py
backend/apps/metadata/: admin.py  models.py  selectors.py  serializers.py  services.py  types.py  urls.py
backend/apps/notifications/: apis.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  types.py  urls.py
backend/apps/novel/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/apps/novels/: admin.py  apis.py  apps.py  dataclasses.py  models.py  selectors.py  serializers.py  (+4 more)
backend/config/: settings.py  urls.py
(+140 files in other folders)
